<resources>
    <string name="app_name">鱼笙</string>
    <string name="day1">一</string>
    <string name="day2">二</string>
    <string name="day3">三</string>
    <string name="day4">四</string>
    <string name="day5">五</string>
    <string name="day6">六</string>
    <string name="day7">日</string>
    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="minute_short">分</string>
    <string name="hour">小时</string>
    <string name="hour_short">时</string>
    <string name="dayT">天</string>
    <string name="dayR">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="behavior_fab_depend_app_bar">com.jiangzg.lovenote.view.GBehaviorFABDependAppBar</string>
    <string name="behavior_fab_depend_app_bar3">com.jiangzg.lovenote.view.GBehaviorFABDependAppBar3</string>
    <string name="behavior_linear_depend_app_bar">com.jiangzg.lovenote.view.GBehaviorLinearDependAppBar</string>
    <string name="behavior_linear_depend_app_bar3">com.jiangzg.lovenote.view.GBehaviorLinearDependAppBar3</string>
    <plurals name="error_over_count">
        <item quantity="one">你只能选择1个文件</item>
        <item quantity="other">最多只能选择 %1$d 个文件</item>
    </plurals>
    <string name="symbol_add">+</string>
    <string name="symbol_sub">-</string>
    <string name="me">我</string>
    <string name="he">他</string>
    <string name="ta">ta</string>
    <string name="she">她</string>
    <string name="year_space">年 </string>
    <string name="month_space">月 </string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="ci">次</string>
    <string name="nil">无</string>
    <string name="prompt">提示</string>
    <string name="confirm">确定</string>
    <string name="agree">同意</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="send">发送</string>
    <string name="wait">等待</string>
    <string name="no_read">未读</string>
    <string name="search">搜索</string>
    <string name="complete">完成</string>
    <string name="now_no">暂无</string>
    <string name="un_know">未知</string>
    <string name="change">更换</string>
    <string name="follow">关注</string>
    <string name="modify">修改</string>
    <string name="browse">浏览</string>
    <string name="go_in">进入</string>
    <string name="comment">评论</string>
    <string name="official">官方</string>
    <string name="well">精华</string>
    <string name="hot">热门</string>
    <string name="point">点赞</string>
    <string name="collect">收藏</string>
    <string name="screen">屏蔽</string>
    <string name="normal">普通</string>
    <string name="time">时间</string>
    <string name="top">置顶</string>
    <string name="all">全部</string>
    <string name="commit">提交</string>
    <string name="push">发布</string>
    <string name="message">消息</string>
    <string name="publish">发表</string>
    <string name="take_picture">拍照</string>
    <string name="show">显示</string>
    <string name="notification">通知</string>
    <string name="other">其他</string>
    <string name="wait_point">等待…</string>
    <string name="please_wait">请等待…</string>
    <string name="we_de">我们的</string>
    <string name="me_de">我的</string>
    <string name="ta_de">TA的</string>
    <string name="administrators">管理员</string>
    <string name="brutal_refuse">残忍拒绝</string>
    <string name="after_say">以后再说</string>
    <string name="set_ok">设置好了</string>
    <string name="i_know">我知道了</string>
    <string name="go_to_setting">前往设置</string>
    <string name="pleasure_accept">欣然接受</string>
    <string name="go_back_top">回到顶部</string>
    <string name="start_search">开始搜索</string>
    <string name="are_task">正在任务</string>
    <string name="cancel_task">取消任务</string>
    <string name="i_choose_ok">我选好了</string>
    <string name="i_think_again">我再想想</string>
    <string name="confirm_no_wrong">确认无误</string>
    <string name="push_success">发布成功</string>
    <string name="go_now">现在前往</string>
    <string name="go_to_know">前往了解</string>
    <string name="are_deleting">正在删除</string>
    <string name="are_refresh">正在刷新</string>
    <string name="loading_sending">正在发送…</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="exit_app">您确定要退出？</string>
    <string name="holder_sprit_holder" formatted="false">%d/%d</string>
    <string name="holder_wave_holder" formatted="false">%s~%s</string>
    <string name="holder_space_line_space_holder" formatted="false">%s - %s</string>
    <string name="holder_space_space_holder" formatted="false">%s  %s</string>
    <string name="space_bracket_holder" formatted="false"> (%d)</string>
    <string name="my_follow">我的关注</string>
    <string name="my_push">我的发布</string>
    <string name="my_collect">我的收藏</string>
    <string name="ta_collect">TA的收藏</string>
    <string name="my_relation">我的相关</string>
    <string name="my_message">我的消息</string>
    <string name="please_input_search_content">请输入搜索内容</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="please_input_comment_content">请输入评论内容</string>
    <string name="please_input_title">请输入标题</string>
    <string name="please_input_content">请输入内容</string>
    <string name="select_search_type">选择搜索类型</string>
    <string name="select_order_type">选择排序类型</string>
    <string name="please_select_classify">请选择分类</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="need_check_some_perm">需要勾选某些权限</string>
    <string name="confirm_delete_this_image">确定要删除这张图片吗</string>
    <string name="need_check_some_perm_can_install">需要勾选相应权限后才能安装</string>
    <string name="please_input_content_no_over_holder_text" formatted="false">请输入内容，不得超过%d个字</string>
    <string name="please_input_title_no_over_holder_text" formatted="false">请输入标题，不得超过%d个字</string>
    <string name="please_input_pwd_no_over_holder_text" formatted="false">请输入密码，不得超过%d个字</string>
    <string name="holder_paper" formatted="false">%d张</string>
    <string name="holder_thousand_point1" formatted="false">%.1f万</string>
    <string name="text_number_space_colon_holder" formatted="false">字数: %d</string>
    <string name="read_space_colon_holder" formatted="false">阅读: %d</string>
    <string name="comment_colon_holder" formatted="false">评论: %d</string>
    <string name="create_at_colon_space_holder" formatted="false">创建于: %s</string>
    <string name="update_at_colon_space_holder" formatted="false">更新于: %s</string>
    <string name="creator_colon_space_holder" formatted="false">创建者: %s</string>
    <string name="total_holder_paper" formatted="false">总共%d张</string>
    <string name="forward_edit_colon_space_holder" formatted="false">上次编辑: %s</string>
    <string name="master_there_nothing">主人，这里啥也没有啊！</string>
    <string name="master_we_worry">主人，咱们…好像…出错了！</string>
    <string name="master_this_is_my_bottom">主人，这已经是我的底线了！</string>
    <string name="master_no_hurry_quick_ok">主人莫急，马上就好…</string>
    <string name="online_can_entry">联网才可以进入哦</string>
    <string name="please_input_search_address_remeber_get_province">请输入搜索地址，记得带上省份！</string>
    <string name="are_upload">正在上传</string>
    <string name="are_download">正在下载</string>
    <string name="cancel_upload">取消上传</string>
    <string name="cancel_download">取消下载</string>
    <string name="already_download_to_colon_holder" formatted="false">已下载至: %s</string>
    <string name="loading">正在加载中</string>
    <string name="are_loading">正在加载中…</string>
    <string name="image_load_fail">图片加载失败</string>
    <string name="audio_load_fail">音频加载失败</string>
    <string name="video_load_fail">视频加载失败</string>
    <string name="click_retry_load">点击重新加载</string>
    <string name="image_is_compress">图片正在获取中…</string>
    <string name="image_compress_fail">图片获取失败</string>
    <string name="image_get_error">图片获取出错</string>
    <string name="upload_fail_tell_we_this_bug">上传失败，可以把这个bug反馈给我们吗</string>
    <string name="download_fail_tell_we_this_bug">下载失败，可以把这个bug反馈给我们吗</string>
    <string name="file_resolve_fail_tell_we_this_bug">文件解析失败，可以把这个bug反馈给我们吗</string>
    <string name="upload_fail_please_check_native_net">上传失败，请检查本地网络环境</string>
    <string name="download_fail_please_check_native_net">下载失败，请检查本地网络环境</string>
    <string name="upload_file_no_exists">上传文件不存在</string>
    <string name="download_file_no_exists">下载文件不存在</string>
    <string name="save_file_no_exists">保存文件不存在</string>
    <string name="access_resource_path_no_exists">访问资源路径不存在</string>
    <string name="not_found_upload_file">没有找到要上传的文件</string>
    <string name="file_no_exits">文件不存在</string>
    <string name="now_just_can_push_holder_img" formatted="false">现在只能上传%d张图片</string>
    <string name="image_too_large_cant_over_holder" formatted="false">图片过大，不能超过%s</string>
    <string name="audio_too_large_cant_over_holder" formatted="false">音频过大，不能超过%s</string>
    <string name="video_too_large_cant_over_holder" formatted="false">视频过大，不能超过%s</string>
    <string name="success_push_holder_paper_picture">成功上传%d张照片</string>
    <string name="file_create_fail">文件创建失败</string>
    <string name="are_upload_space_holder_holder" formatted="false">正在上传 %d/%d</string>
    <string name="are_compress_space_holder_holder" formatted="false">正在获取 %d/%d</string>
    <string name="no_network_title">网络不能访问</string>
    <string name="server_error">服务器异常</string>
    <string name="http_error_connect">网络连接错误</string>
    <string name="http_error_time">网络连接超时</string>
    <string name="http_error_time_maybe_setting_wrong">网络连接超时,是不是网络设置出错了吧</string>
    <string name="http_error_request">网络请求异常</string>
    <string name="err_un_know_server">服务器未知错误 (把这个bug提交给我们吧)</string>
    <string name="err_un_know_client">客户端未知错误 (把这个bug提交给我们吧)</string>
    <string name="err_data_null">空数据异常</string>
    <string name="err_data_parse">数据解析异常</string>
    <string name="http_response_error">网络响应异常</string>
    <string name="http_response_error_403">Key错误</string>
    <string name="http_response_error_404">资源未找到</string>
    <string name="http_response_error_409">用户版本过低</string>
    <string name="http_response_error_410">用户被禁用</string>
    <string name="nav_couple">我和TA</string>
    <string name="nav_topic">恋爱吧</string>
    <string name="splash_sub_title_1">专为异地恋打造</string>
    <string name="splash_sub_title_3">分享恋爱是是非非</string>
    <string name="splash_content_1">不仅可以查看双方位置，更有历史位置信息！\n\n不仅可以查看双方天气，还能看天气预报哦！\n\n更有App启动图设置，让《鱼笙》成为你的私人订制！</string>
    <string name="splash_content_3">不管是搞笑的、悲伤的，什么事都可以在这里诉说！\n\n丰富的类别划分，满足你任何方面的吐槽！\n\n保密的区域隔离，让你随时随地说个不停！</string>
    <string name="base_settings">基本设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="contain_image_audio_video_total_colon_holder" formatted="false">包括图片、音频、视频缓存 (共:%s)</string>
    <string name="notice_settings">通知设置</string>
    <string name="system_notice">系统通知</string>
    <string name="social_notice">社交通知</string>
    <string name="receive_system_send_import_notice">接受系统发送的重要通知</string>
    <string name="receive_from_social_notice">接受来自用户的社交通知</string>
    <string name="account_settings">账号设置</string>
    <string name="change_phone">更换手机</string>
    <string name="modify_password">修改密码</string>
    <string name="about_and_help">关于与帮助</string>
    <string name="help_document">帮助文档</string>
    <string name="contact_us">联系我们</string>
    <string name="exist_account">退出账号</string>
    <string name="theme">主题</string>
    <string name="check_update">检查更新</string>
    <string name="suggest_feedback">意见反馈</string>
    <string name="i_want_feedback">朕要反馈</string>
    <string name="login">登录</string>
    <string name="input_hint_phone">请输入手机号</string>
    <string name="input_hint_pwd">请输入密码</string>
    <string name="user_protocol">用户协议</string>
</resources>