<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/FontWhiteHugeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSubTitle"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/nav_couple"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/tvSubTitle"
        style="@style/FontWhiteHugeBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvContent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/splash_sub_title_1"/>

    <TextView
        android:id="@+id/tvContent"
        style="@style/FontWhiteBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/splash_content_1"
        android:textStyle="italic"/>
</RelativeLayout>