<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:background="#fff"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/etPhone"
                style="@style/FontBlackNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableStart="@mipmap/ic_login_phone"
                android:hint="@string/input_hint_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <EditText
                android:id="@+id/etPwd"
                style="@style/FontBlackNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="15dp"
                android:drawableStart="@mipmap/ic_login_pwd"
                android:hint="@string/input_hint_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbProtocol"
                style="@style/FontPrimarySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/agree"/>

            <TextView
                android:id="@+id/tvProtocol"
                style="@style/FontBlackSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/user_protocol"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/FontWhiteBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_btn_normal"
            android:text="@string/login"
            android:textStyle="bold"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
