<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <!--<ProgressBar-->
        <!--style="@android:style/Widget.Material.ProgressBar.Small"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="5dp"/>-->

        <TextView
            style="@style/FontGreyNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/master_no_hurry_quick_ok"
            android:textColor="@color/trans_00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoadEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/FontGreyNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/master_this_is_my_bottom"
            android:textColor="@color/trans_00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoadFail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            style="@style/FontGreyNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/master_we_worry"
            android:textColor="@color/trans_00"/>
    </LinearLayout>
</LinearLayout>