<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="@dimen/elevation_normal"
        app:cardMaxElevation="@dimen/elevation_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMy"
                style="@style/FontWhiteNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="middle"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/my_push"/>

            <TextView
                android:id="@+id/tvFollow"
                style="@style/FontPrimaryNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:ellipsize="middle"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/my_follow"/>

            <TextView
                android:id="@+id/tvAdd"
                style="@style/FontWhiteNormal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="middle"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/i_want_feedback"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
